--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,6 +1,6 @@
 /*
-* Author - Aditya Krishna
-* Email - adityakrishna9471@gmail.com
+* Author - Soumen Patra
+* Email - soumenpat198@gmail.com
 */
 body {
 	font-family: 'Montserrat', sans-serif;
